[project]
name = "SimplerEnv"
version = "0.1.0"
description = "SimplerEnv: Simulated Manipulation Policy Evaluation Environments for Real Robot Setups"
readme = "README.md"
requires-python = ">=3.10, <=3.11"
dependencies = [
    "apache-beam==2.54.0",
    "coacd>=1.0.7",
    "distrax==0.1.5",
    "dlimp",
    "dm-reverb[tensorflow]==0.14.0",
    "einops>=0.8.1",
    "flax==0.8.1",
    "ipython==8.22.2",
    "matplotlib>=3.10.3",
    "mediapy==1.2.0",
    "ml-collections>=1.1.0",
    "numpy<2.0",
    "plotly>=6.1.2",
    "rlds==0.1.8",
    "scipy==1.12.0",
    "tensorflow==2.15.0",
    "tensorflow-datasets==4.9.4",
    "tensorflow-hub==0.16.0",
    "tf-agents==0.19.0",
    "tfds-nightly==4.9.4.dev202403220044",
    "tfp-nightly==0.25.0.dev20240322",
    "transformers>=4.52.4",
    "wandb>=0.19.11",
]


[tool.black]
# https://github.com/psf/black
line-length = 120
target-version = ["py310"]
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist)"

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "True"
order_by_type = "False"

[tool.uv.sources]
dlimp = { git = "https://github.com/kvablack/dlimp", rev = "d08da3852c149548aaa8551186d619d87375df08" }
